Fix: :bug: Fix posts width when <pre> is too long

--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -42,6 +42,7 @@
 	tab-size: 2;
     background: var(--clr-bg-3);
     overflow-x: auto;
+    white-space: pre-wrap;
 }
 
 .prose img {
